Aligned logo and sidebar. Fixed main-content margin-left priority.

--- a/assets/scss/modules/_navigation.scss
+++ b/assets/scss/modules/_navigation.scss
@@ -95,7 +95,6 @@
 }
 
 #logo-desktop {
-  margin-left: 1px;
   img {
     margin-left: 0;
   }
