--- a/assets/scss/templates/_page-sidebar-left.scss
+++ b/assets/scss/templates/_page-sidebar-left.scss
@@ -1,6 +1,6 @@
 #page-sidebar-left {
   @include grid-row();
-  max-width: none;
+  max-width: 100vw;
 
   .main-content {
     @include breakpoint(small) {
@@ -8,9 +8,6 @@
     }
 
     @include breakpoint(medium) {
-      @include grid-column(12);
-      // @include grid-column(11);
-      // @include grid-col-pos(1);
       padding-left: 142px;
     }
   }
@@ -19,11 +16,8 @@
     @include show-for(medium);
 
     @include breakpoint(medium) {
-      // @include grid-column(1);
-      // @include grid-col-pos(-11);
       position: fixed;
       width: 132px;
-      top: 132px;
       left: 0;
       background: #303b43;
     }
